--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
 <%= link_to 'My Blog', controller: 'articles' %>
 
 <%= form_for @article do |form| %>
+    <%= form.cktext_area :text, :class => 'someclass', :ckeditor => {:language => 'uk'} %>
     <%= form.cktext_area :text, :value => 'Default value', :id => 'sometext' %>
-    <%= cktext_area :page, :title, :cols => 40, :ckeditor => {:uiColor => '#AADC6E', :toolbar => 'mini'} %>
+    <%= cktext_area :page, :text, :cols => 40, :ckeditor => {:uiColor => '#AADC6E', :toolbar => 'mini'} %>
 <% end %>
