--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Hello, Rails!</h1>
 
 <%= link_to 'My Blog', controller: 'articles' %>
-
-<%= form_for @article do |form| %>
-    <%= form.cktext_area :text, :value => 'Default value', :id => 'sometext' %>
-    <%= cktext_area :page, :title, :cols => 40, :ckeditor => {:uiColor => '#AADC6E', :toolbar => 'mini'} %>
-<% end %>
+<br>
+<%= link_to 'CKEditor Demo', '/ckeditor' %>
+<br>
+<%= link_to 'Mercury Demo', '/mercury' %>
+<br>
+<%= link_to 'KindEditor Demo', '/kindeditor' %>
+<br>
+<%= link_to 'UEditor Demo', '/ueditor' %>
