--- a/app/views/welcome/mercury.html.erb
+++ b/app/views/welcome/mercury.html.erb
@@ -6,5 +6,5 @@
   <%= raw @article.text %>
 </div>
 <p>
-  <%= link_to "Edit Page", "/editor" + request.path, id: "edit_link", data: {save_url: mercury_update_page_path(@page)} %>
+  <%= link_to "Edit Page", "/editor" + request.path, id: "edit_link", data: {save_url: mercury_update_articles_path(@article)} %>
 </p>
